macro (build_and_run arg)
	add_executable(Sqlpp11Sqlite3${arg} ${arg}.cpp)
	target_link_libraries(Sqlpp11Sqlite3${arg} sqlpp11-connector-sqlite3 sqlite3)
	add_test(Sqlpp11Sqlite3${arg} Sqlpp11Sqlite3${arg})
endmacro ()

build_and_run(SampleTest)
build_and_run(SelectTest)
build_and_run(UnionTest)
build_and_run(WithTest)
build_and_run(AttachTest)
build_and_run(DynamicSelectTest)
